{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 698,
  "lineage": "6e9fc932-0e19-54b3-7bef-4a984841f8fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05947f465eea56bbc",
            "arn": "arn:aws:ec2:us-east-1:141353768400:elastic-ip/eipalloc-05947f465eea56bbc",
            "domain": "vpc",
            "id": "eipalloc-05947f465eea56bbc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-1-214-255.compute-1.amazonaws.com",
            "public_ip": "52.1.214.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP-1"
            },
            "tags_all": {
              "Name": "NAT-EIP-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047cde34ba27dfea6",
            "arn": "arn:aws:ec2:us-east-1:141353768400:elastic-ip/eipalloc-047cde34ba27dfea6",
            "domain": "vpc",
            "id": "eipalloc-047cde34ba27dfea6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-211-106-34.compute-1.amazonaws.com",
            "public_ip": "18.211.106.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP-2"
            },
            "tags_all": {
              "Name": "NAT-EIP-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:141353768400:instance/i-08f49b8254d36dac8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f49b8254d36dac8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003753d15d86fd670",
            "private_dns": "ip-10-0-3-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.131",
            "public_ip": "13.217.57.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3a8dfebb1cc7efa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04526b3468b8886b2",
            "tags": {
              "Name": "backend-az-1"
            },
            "tags_all": {
              "Name": "backend-az-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5dcc5c15b660fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:141353768400:instance/i-0772a6649ef2d6b8c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0772a6649ef2d6b8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0344ccb2ebfac45e8",
            "private_dns": "ip-10-0-6-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.248",
            "public_ip": "34.233.71.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02830b67a98256d90",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d51a616b30192d6c",
            "tags": {
              "Name": "backend-az-2"
            },
            "tags_all": {
              "Name": "backend-az-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5dcc5c15b660fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.private_subnet_4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:141353768400:instance/i-0a8d02b0dfa3f5d48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8d02b0dfa3f5d48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3b2b6b2c5da9720",
            "private_dns": "ip-10-0-2-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.216",
            "public_ip": "54.157.36.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ab947ec9e735d17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093e67549e6c7c627",
            "tags": {
              "Name": "frontend-az-1"
            },
            "tags_all": {
              "Name": "frontend-az-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5dcc5c15b660fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:141353768400:instance/i-0a1dbe9de70d0f4f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1dbe9de70d0f4f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4eb02adeeb9870b",
            "private_dns": "ip-10-0-3-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.152",
            "public_ip": "3.90.224.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074060b43f49a490a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04526b3468b8886b2",
            "tags": {
              "Name": "frontend-az-2"
            },
            "tags_all": {
              "Name": "frontend-az-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5dcc5c15b660fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:internet-gateway/igw-081e739966cc49d0c",
            "id": "igw-081e739966cc49d0c",
            "owner_id": "141353768400",
            "tags": {
              "Name": "medi-sync-ai-igw-1476"
            },
            "tags_all": {
              "Name": "medi-sync-ai-igw-1476"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05947f465eea56bbc",
            "association_id": "eipassoc-00519d7ca82984976",
            "connectivity_type": "public",
            "id": "nat-090eb969ddf2cdb2c",
            "network_interface_id": "eni-043a4b0a5488dda17",
            "private_ip": "10.0.1.158",
            "public_ip": "52.1.214.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e3eb5dcb8ca1a16",
            "tags": {
              "Name": "NAT-1"
            },
            "tags_all": {
              "Name": "NAT-1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047cde34ba27dfea6",
            "association_id": "eipassoc-06bc64537095c0d38",
            "connectivity_type": "public",
            "id": "nat-0f6ccfc3064e936d5",
            "network_interface_id": "eni-02c8f38cc2356f2b4",
            "private_ip": "10.0.5.21",
            "public_ip": "18.211.106.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea9bf99de40c5729",
            "tags": {
              "Name": "NAT-2"
            },
            "tags_all": {
              "Name": "NAT-2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend-route-table-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-0c933df78c9a9a4f1",
            "id": "rtb-0c933df78c9a9a4f1",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-090eb969ddf2cdb2c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-2-az-1-rt"
            },
            "tags_all": {
              "Name": "module-2-az-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend-route-table-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-0073c470e47e312de",
            "id": "rtb-0073c470e47e312de",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f6ccfc3064e936d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-2-az-2-rt"
            },
            "tags_all": {
              "Name": "module-2-az-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-2",
            "aws_subnet.private_subnet_6",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "front-end-route-table-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-0d94f1f912a7427b1",
            "id": "rtb-0d94f1f912a7427b1",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-090eb969ddf2cdb2c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-1-az-1-rt"
            },
            "tags_all": {
              "Name": "module-1-az-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "front-end-route-table-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-0ed7a5b7fed9f6279",
            "id": "rtb-0ed7a5b7fed9f6279",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f6ccfc3064e936d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-1-az-2-rt"
            },
            "tags_all": {
              "Name": "module-1-az-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-2",
            "aws_subnet.private_subnet_4",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-route-table-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-0fdda3b26851adc84",
            "id": "rtb-0fdda3b26851adc84",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081e739966cc49d0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-0-az-1-rt"
            },
            "tags_all": {
              "Name": "module-0-az-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-route-table-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:route-table/rtb-085b33ab95f3fc549",
            "id": "rtb-085b33ab95f3fc549",
            "owner_id": "141353768400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081e739966cc49d0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-0-az-2-rt"
            },
            "tags_all": {
              "Name": "module-0-az-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-0-rt-association-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01107d706202a17aa",
            "route_table_id": "rtb-0fdda3b26851adc84",
            "subnet_id": "subnet-02e3eb5dcb8ca1a16"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-subnet-route-table-az-1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-0-rt-association-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07803d6b92ca77d9d",
            "route_table_id": "rtb-085b33ab95f3fc549",
            "subnet_id": "subnet-0ea9bf99de40c5729"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-subnet-route-table-az-2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-1-rt-association-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d6f92de428a8b1e",
            "route_table_id": "rtb-0d94f1f912a7427b1",
            "subnet_id": "subnet-093e67549e6c7c627"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_route_table.front-end-route-table-az-1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-1-rt-association-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f2769cfda9e624",
            "route_table_id": "rtb-0ed7a5b7fed9f6279",
            "subnet_id": "subnet-0d51a616b30192d6c"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-2",
            "aws_route_table.front-end-route-table-az-2",
            "aws_subnet.private_subnet_4",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-2-rt-association-az-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14f15c2da109acd",
            "route_table_id": "rtb-0c933df78c9a9a4f1",
            "subnet_id": "subnet-04526b3468b8886b2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_route_table.backend-route-table-az-1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "module-2-rt-association-az-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9ffaf6a234355f",
            "route_table_id": "rtb-0073c470e47e312de",
            "subnet_id": "subnet-0f69bd2432c549db9"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-2",
            "aws_route_table.backend-route-table-az-2",
            "aws_subnet.private_subnet_5",
            "aws_subnet.private_subnet_6",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:security-group/sg-09605c04a7d21ff93",
            "description": "Allow SSH inbound traffic and http/https traffic in and out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09605c04a7d21ff93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "141353768400",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg"
            },
            "tags_all": {
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:security-group/sg-05b9cd602ea857980",
            "description": "Allow SSH inbound traffic and http/https traffic in and out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b9cd602ea857980",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "141353768400",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:security-group/sg-0f5dcc5c15b660fd5",
            "description": "Allow SSH inbound traffic and http/https traffic in and out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5dcc5c15b660fd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "141353768400",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-093e67549e6c7c627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093e67549e6c7c627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-1-private-1"
            },
            "tags_all": {
              "Name": "az-1-private-1"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-04526b3468b8886b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04526b3468b8886b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-1-private-2"
            },
            "tags_all": {
              "Name": "az-1-private-2"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-0de83fd7e5b4c4d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de83fd7e5b4c4d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-1-private-3"
            },
            "tags_all": {
              "Name": "az-1-private-3"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-0d51a616b30192d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d51a616b30192d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-2-private-1"
            },
            "tags_all": {
              "Name": "az-2-private-1"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-0f69bd2432c549db9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f69bd2432c549db9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-2-private-2"
            },
            "tags_all": {
              "Name": "az-2-private-2"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-0016e76a08161c684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016e76a08161c684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-2-private-3"
            },
            "tags_all": {
              "Name": "az-2-private-3"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-02e3eb5dcb8ca1a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e3eb5dcb8ca1a16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-1-public-1"
            },
            "tags_all": {
              "Name": "az-1-public-1"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:subnet/subnet-0ea9bf99de40c5729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9bf99de40c5729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141353768400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "az-2-public-1"
            },
            "tags_all": {
              "Name": "az-2-public-1"
            },
            "vpc_id": "vpc-0390fe00035032d88"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141353768400:vpc/vpc-0390fe00035032d88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00307b78375e5f65a",
            "default_route_table_id": "rtb-06a605a0470789f34",
            "default_security_group_id": "sg-0c35ce043709b4672",
            "dhcp_options_id": "dopt-0e06fdd9f8f017ea5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0390fe00035032d88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a605a0470789f34",
            "owner_id": "141353768400",
            "tags": {
              "Name": "medi-sync-ai-secure-vpc-1476"
            },
            "tags_all": {
              "Name": "medi-sync-ai-secure-vpc-1476"
            }
          }
        }
      ]
    }
  ]
}